@@ -1099,6 +1099,17 @@ literal|"Format versions mismatch"
 argument_list|)
 throw|;
 block|}
+comment|// NOTE: data file is too costly to verify checksum against all the bytes on open,
+comment|// but for now we at least verify proper structure of the checksum footer: which looks
+comment|// for FOOTER_MAGIC + algorithmID. This is cheap and can detect some forms of corruption
+comment|// such as file truncation.
+name|CodecUtil
+operator|.
+name|retrieveChecksum
+argument_list|(
+name|data
+argument_list|)
+expr_stmt|;
 name|success
 operator|=
 literal|true
