@@ -509,6 +509,27 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|version
+operator|>=
+name|Lucene41PostingsWriter
+operator|.
+name|VERSION_CHECKSUM
+condition|)
+block|{
+comment|// NOTE: data file is too costly to verify checksum against all the bytes on open,
+comment|// but for now we at least verify proper structure of the checksum footer: which looks
+comment|// for FOOTER_MAGIC + algorithmID. This is cheap and can detect some forms of corruption
+comment|// such as file truncation.
+name|CodecUtil
+operator|.
+name|retrieveChecksum
+argument_list|(
+name|docIn
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|fieldInfos
 operator|.
 name|hasProx
@@ -554,6 +575,27 @@ argument_list|,
 name|version
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|version
+operator|>=
+name|Lucene41PostingsWriter
+operator|.
+name|VERSION_CHECKSUM
+condition|)
+block|{
+comment|// NOTE: data file is too costly to verify checksum against all the bytes on open,
+comment|// but for now we at least verify proper structure of the checksum footer: which looks
+comment|// for FOOTER_MAGIC + algorithmID. This is cheap and can detect some forms of corruption
+comment|// such as file truncation.
+name|CodecUtil
+operator|.
+name|retrieveChecksum
+argument_list|(
+name|posIn
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|fieldInfos
@@ -606,6 +648,27 @@ argument_list|,
 name|version
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|version
+operator|>=
+name|Lucene41PostingsWriter
+operator|.
+name|VERSION_CHECKSUM
+condition|)
+block|{
+comment|// NOTE: data file is too costly to verify checksum against all the bytes on open,
+comment|// but for now we at least verify proper structure of the checksum footer: which looks
+comment|// for FOOTER_MAGIC + algorithmID. This is cheap and can detect some forms of corruption
+comment|// such as file truncation.
+name|CodecUtil
+operator|.
+name|retrieveChecksum
+argument_list|(
+name|payIn
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 name|this
